<resources>
    <string name="app_name">Wooltari</string>
    <string name="title_activity_pet_main">PetMainActivity</string>
    <string name="facebook_app_id">1974634276151336</string>
    <string name="fb_login_protocol_scheme">fb1974634276151336</string>


    <!-- Error Message -->
    <string name="unknown_error">Unknown error</string>
    <string name="image_size_error">Image Size is to Large</string>
    <string name="invalid_token">You do not access this feature</string>
    <string name="pet_null">Can not find your Pet</string>
    <string name="pet_age_null">Can not find Pet Age</string>
    <string name="pet_breed_null">Can not find this Pet Breeds</string>
    <string name="pet_delete_success">Delete your Pet success</string>
    <string name="user_email_unique">This email already exists</string>
    <string name="user_nickname_unique">This nickname already exists</string>
    <string name="user_email_valid">Enter a valid email address.</string>
    <string name="user_signin_fail">Id or Password is not correct!!</string>
    <string name="user_signout_fail">signout failed, please siginout again</string>
    <string name="user_forgot_password_email_incorrect">Email does not exist.</string>
    <string name="user_null">Can not find your information</string>
    <string name="user_delete_success">withdrawal complete</string>
    <string name="user_sign_again">Please signin again</string>

    <!-- navigation_bar-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_pet_state">Pet State</string>
    <string name="navigation_drawer_item_vaccination">Vaccination</string>
    <string name="navigation_drawer_item_medical_info">Medical Info</string>
    <string name="navigation_pet_null">Pet Registration First</string>

    <!-- toolbar-->
    <string name="action_settings">24 hour hospital</string>

    <!-- camera&gallery popup -->
    <string name="popup_camera_gallery_title_profile">Profile</string>
    <string name="popup_camera_gallery_title_medical">Medical Info</string>
    <string name="popup_btn_camera">Camera</string>
    <string name="popup_btn_gallery">Select photo</string>
    <string name="popup_btn_delete">Delete</string>

    <!--PetAlarmDialog -->
    <string name="alarm_dialog_title">Alarm Setting</string>
    <string name="alarm_dialog_pet">Pet : </string>
    <string name="alarm_dialog_date">Date : </string>
    <string name="alarm_dialog_time">- Time -</string>
    <string name="alarm_dialog_content">- Contents -</string>
    <string name="alarm_dialog_sound">Sound</string>
    <string name="alarm_dialog_on_off">Alarm On/Off</string>
    <string name="alarm_dialog_hour_hint">Hour..</string>
    <string name="alarm_dialog_min_hint">Min..</string>
    <string name="alarm_dialog_sound_hint">Select Sound..</string>
    <string name="alarm_dialog_permission_title">Permission Required</string>
    <string name="alarm_dialog_permission_msg">If you want to use the Alarm, Please this app access your alarm Permission. \n If you click the "OK" Button, screen moves to your alarm settings</string>
    <string-array name="alarm_pet_sound">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Sheep</item>
    </string-array>


    <!-- AlertDialog -->
    <string name="alert_ok">OK</string>
    <string name="alert_permission_title">Permission Required</string>
    <string name="alert_permission_msg">Permissions needed to use this feature.\nPlease grant access in your devices\'s setting</string>
    <string name="alert_pet_save_title">Pet information save</string>
    <string name="alert_pet_save_msg">Are you sure you want to add your Pet?</string>
    <string name="alert_pet_active_title">Pet information change state</string>
    <string name="alert_pet_active_msg">Are you sure you want to change your Pet state?</string>
    <string name="alert_pet_delete_title">Pet Information delete</string>
    <string name="alert_pet_delete_msg">Are you sure you want to delete your Pet?</string>
    <string name="alert_pet_cancel_title">Pet information cancel</string>
    <string name="alert_pet_cancel_msg">Are you sure you want to cancel your work?</string>
    <string name="alert_pet_cancel_back_title">Pet information cancel</string>
    <string name="alert_pet_cancel_back_msg">Are you sure you want to cancel your work?\nIf you press the back button, the work will be canceled</string>

    <!-- Pet Common -->
    <string name="pet_btn_add">Add</string>
    <string name="pet_btn_edit">Edit</string>
    <string name="pet_btn_delete">Delete</string>
    <string name="pet_btn_cancel">Cancel</string>

    <!-- Pet Profile -->
    <string name="pet_profile">Pet Profile</string>
    <string name="pet_profile_register">Pet Register</string>
    <string name="pet_profile_edit">Pet Profile Edit</string>
    <string name="pet_profile_name">Name</string>
    <string name="pet_profile_name_hint">Write your pet\'s name</string>
    <string name="pet_profile_birth_hint">ex) 20160504</string>
    <string name="pet_profile_species">Species</string>
    <string name="pet_profile_breeds">Breeds</string>
    <string name="pet_profile_birth">Birth</string>
    <string name="pet_profile_age">Age</string>
    <string name="pet_profile_human_age">HumanAge</string>
    <string name="pet_profile_sex">Sex</string>
    <string name="pet_profile_neutralization">Neuter /\nSpay</string>
    <string name="pet_profile_neuter">Neuter</string>
    <string name="pet_profile_spay">Spay</string>
    <string name="pet_profile_number">Number</string>
    <string name="pet_profile_number_hint">Write your pet\'s number</string>
    <string name="pet_profile_btn_number_search">Search</string>
    <string name="pet_profile_color">Color</string>
    <string name="pet_profile_btn_state_active">Active</string>
    <string name="pet_profile_btn_state_inactive">InActive</string>
    <string name="pet_profile_species_hint">Select Species..</string>
    <string name="pet_profile_breeds_hint">Select Breeds..</string>
    <string name="pet_profile_save_success">Save Competed</string>
    <string name="pet_profile_update_success">Update Competed</string>
    <string name="pet_profile_delete_success">Delete Competed</string>
    <string name="pet_profile_change_active_success">Change State Competed</string>

    <string-array name="pet_species_item">
        <item>dog</item>
        <item>cat</item>
    </string-array>
    <string-array name="pet_breeds_dog_item">
        <item>Shih Tzu</item>
        <item>Golden Retriever</item>
    </string-array>
    <string-array name="pet_breeds_cat_item">
        <item>Korean Short Hair</item>
        <item>persian</item>
    </string-array>

    <!-- Pet Detail -->
    <string name="pet_detail_schedule_title">Closing Pet Schedules</string>
    <string name="pet_detail_vaccine_title">Closing Vaccination Schedule</string>
    <string name="pet_detail_medical_title">The last Medical Information</string>
    <string name="pet_detail_more">More</string>
    <string name="pet_detail_vaccine_name">Name</string>
    <string name="pet_detail_vaccine_past_date">Past date</string>
    <string name="pet_detail_vaccine_expected_date">Expected date</string>
    <string name="pet_detail_vaccine_cycle">Cycle</string>

    <!-- Pet Health State -->
    <string name="pet_state_title">Pet State</string>
    <string name="pet_state_weight">Weight</string>
    <string name="pet_state_weight_goal">Goal Weight</string>
    <string name="pet_state_height">Height</string>
    <string name="pet_state_neck_size">Neck Size</string>
    <string name="pet_state_chest_size">Chest Size</string>
    <string name="pet_state_gap">Gap</string>
    <string name="pet_state_chart_date">Last measurement date :</string>
    <string name="pet_state_detail_title">Detail of Weight</string>
    <string name="pet_state_detail_weight_goal">Goal :  </string>
    <string name="pet_state_detail_date">Date</string>
    <string name="pet_state_detail_weight">Weight</string>
    <string name="pet_state_detail_change">Change</string>
    <string name="pet_state_detail_edit">Edit</string>
    <string name="pet_state_detail_more">More Data</string>
    <string name="pet_state_detail_left">\u003c</string>
    <string name="pet_state_detail_right">\u003e</string>
    <string name="pet_state_detail_no_more">no more data existed</string>
    <string name="pet_state_dialog_edit_title">Edit Pet State</string>
    <string name="pet_state_dialog_edit_submit">Submit</string>
    <string name="pet_state_dialog_edit_cancel">Cancel</string>
    <string name="pet_state_save_valid">All format is valid</string>
    <string name="pet_state_save_invalid">Some format is invalid</string>

    <!-- Medical Info -->
    <string name="pet_medical_title">Medical Information</string>
    <string name="pet_medical_title_input">new Medical Info</string>
    <string name="pet_medical_title_edit">edit Medical Info</string>
    <string name="pet_medical_no_image">No Image</string>
    <string name="pet_medical_date">Date</string>
    <string name="pet_medical_description">Description</string>
    <string name="pet_medical_comment">Comment</string>
    <string name="pet_medical_alarm">Alarm</string>
    <string name="pet_medical_information_edit">Edit info</string>
    <string name="pet_medical_information_add">Add info</string>
    <string name="pet_medical_past_info">Other Information</string>

    <!-- UserInfo -->
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_password_confirm">Confirm Password</string>
    <string name="user_sign_up">Sign up</string>
    <string name="user_sign_up_text"><u>No account yet? Create One</u></string>
    <string name="user_sign_in">Sign in</string>
    <string name="user_sign_in_facebook">Sign in with facebook</string>
    <string name="user_forgot_password">Dp you forget password?</string>
    <string name="user_sign_in_subtitle">A good friend who keeps your animal</string>
    <string name="user_sign_in_back_pressed">If you press back button again, wooltari is finished</string>
    <string name="user_sign_up_double_check">Double Check</string>

    <!-- SignUpActivity Button  Message-->
    <string name="signup_button_text_duplication_is_not_allowed">중복확인</string>
    <string name="signup_edittext_hint_id">id</string>
    <string name="signup_edittext_hint_nickname">nickname</string>
    <string name="signup_edittext_hint_password1">password1</string>
    <string name="signup_edittext_hint_password2">password2</string>
    <string name="signup_edittext_hint_cancel">cancel</string>
    <string name="signup_edittext_hint_join">join</string>
</resources>
