<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pet_state"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/navigation_drawer_item_pet_state" />
        <item
            android:id="@+id/nav_vaccination"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/navigation_drawer_item_vaccination" />
        <item
            android:id="@+id/nav_medical_info"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="@string/navigation_drawer_item_medical_info" />
    </group>

</menu>
