<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/pet_card_radius_degree"
        app:cardBackgroundColor="@color/colorGray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/popup_cg_padding">

            <TextView
                android:id="@+id/textCGPopupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/popup_camera_gallery_title_profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_btn_camera" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_btn_gallery" />

            <Button
                android:id="@+id/btnCGDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_btn_delete" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>