<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlackD">

    <TextView
        android:id="@+id/textPDPTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="@dimen/pet_detail_average_margin"
        android:paddingLeft="@dimen/pet_detail_average_margin"/>

    <Button
        android:id="@+id/btnPetStateEdit"
        android:layout_width="@dimen/pet_state_edit_button_size"
        android:layout_height="@dimen/pet_state_edit_button_size"
        android:background="@drawable/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<TextView-->
        <!--android:id="@+id/PDPMore"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/pet_detail_more"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <View
        android:id="@+id/viewPDPLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pet_detail_line_depth"
        android:layout_marginTop="@dimen/pet_detail_average_margin"
        android:background="@color/colorBlackE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPDPTitle" />


    <LinearLayout
        android:id="@+id/linearPDPProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:overScrollMode="always"
        android:paddingRight="@dimen/pet_detail_average_margin"
        android:paddingLeft="@dimen/pet_detail_average_margin"
        android:paddingBottom="@dimen/pet_detail_average_margin"
        android:layout_marginTop="@dimen/pet_detail_average_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPDPLine">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pet_detail_profile_text_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPDPSpecies"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_species" />

            <TextView
                android:id="@+id/textPDPSpeciesValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/textPDPBreeds"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_breeds" />

            <TextView
                android:id="@+id/textPDPBreedsValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pet_detail_profile_text_margin"
            android:layout_marginTop="@dimen/pet_detail_profile_text_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPDPBirth"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_birth" />

            <TextView
                android:id="@+id/textPDPBirthValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pet_detail_profile_text_margin"
            android:layout_marginTop="@dimen/pet_detail_profile_text_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPDPAge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_age" />

            <TextView
                android:id="@+id/textPDPAgeValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/textPDPHumanAge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_human_age" />

            <TextView
                android:id="@+id/textPDPHumanAgeValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pet_detail_profile_text_margin"
            android:layout_marginTop="@dimen/pet_detail_profile_text_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPDPSex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_sex" />

            <TextView
                android:id="@+id/textPDPSexValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/textPDPNeuter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_neuter" />

            <TextView
                android:id="@+id/textPDPNeuterValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pet_detail_profile_text_margin"
            android:layout_marginTop="@dimen/pet_detail_profile_text_margin"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textPDPNum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pet_profile_number" />

            <TextView
                android:id="@+id/textPDPNumValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>